# artoria

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: Dockerfile  app.py  requirements.txt
artoria/: __init__.py  data.py  evaluate.py  model.py  tokenizer.py  train.py
web/: next.config.ts  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/arena/: page.tsx
web/src/app/play/: page.tsx
web/src/lib/: api.ts
